--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,22 @@
 
 } */
 
+.sr-only {
+
+    position: absolute;
+  
+    left: -10000px;
+  
+    top: auto;
+  
+    width: 1px;
+  
+    height: 1px;
+  
+    overflow: hidden;
+  
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -13,15 +29,36 @@ section {
 
 header {
     background-color: #000;
+    padding-top: 2rem;
+}
+
+.sticky {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    background-color: #000;
+}
+
+nav {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    background-color: #000;
+    padding-left: 0.5rem;
 }
 
 /* typography */
 
-h2 {
+h2,
+h3 {
     color: #dc413e;
     text-transform: uppercase;
     font-size: 3.75rem;
     font-weight: 200;
+}
+
+h3 {
+    font-size: 2.8125rem;
 }
 
 p {
@@ -54,6 +91,7 @@ svg {
 fieldset {
     border: none;
     padding: 0;
+    margin-bottom: 40px;
 }
 
 label {
@@ -62,11 +100,90 @@ label {
     display: block;
 }
 
-input {
+input,
+textarea {
     width: 100%;
     border: 1px solid #c0c0c0;
     border-radius: 5px;
     padding: 0.5rem;
     box-shadow: 2px 2px 3px #e8e8e8;
     
+}
+
+textarea {
+    resize: vertical;
+    min-height: 300px;
+}
+
+input[type="checkbox"] {
+    width: 24px;
+    height: 24px;
+    padding-top: 0;
+}
+
+
+label[for="accept"] {
+    display: inline;
+    font-size: 1.2rem;
+}
+
+input[type="submit"] {
+    text-transform: uppercase;
+    font-size: 1.875rem;
+    width: auto;
+    border: none;
+    background-color: #fff;
+    box-shadow: none;
+    font-weight: bold;
+    cursor: pointer;
+    transition: padding-left 1s ease;
+}
+
+input[type="submit"]:hover {
+    color: #dc413e;
+    padding-left: 20px;
+}
+
+input[id="email"]:invalid,
+input[type="url"]:invalid,
+input[id="name"]:invalid,
+input[type="number"]:invalid
+textarea[name="text"]:invalid {
+    box-shadow: 2px 2px tomato;
+}
+
+input[id="email"]:valid,
+input[type="url"]:valid,
+input[id="name"]:valid,
+input[type="number"]:valid,
+textarea[name="text"]:valid {
+    box-shadow: 3px 3px green;
+}
+
+
+@media only screen and (min-width: 1260px) {
+    /* move to a 2 column layout and add a fixed width container */
+    fieldset {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    fieldset div {
+        flex: 0 1 49%;
+
+    }
+
+    h3 {
+        width: 100%;
+    }
+
+    .inner-container,
+    section,
+    nav {
+        padding: 0;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
 }
